@@ -22,11 +22,14 @@
 #include <grub/misc.h>
 
 typedef grub_size_t size_t;
-typedef int bool;
-static const bool true = 1;
-static const bool false = 0;
+typedef enum { false = 0, true = 1 } bool;
 
 #define ULONG_MAX GRUB_ULONG_MAX
 #define UCHAR_MAX 0xff
+
+typedef grub_uint8_t uint8_t;
+typedef grub_uint16_t uint16_t;
+typedef grub_uint32_t uint32_t;
+typedef grub_uint64_t uint64_t;
 
 #endif
